--- a/workout-app/src/Components/Workouts/Workouts Styles/itemStyles.css
+++ b/workout-app/src/Components/Workouts/Workouts Styles/itemStyles.css
@@ -1,3 +1,10 @@
 .workoutItem{
     background-color: chartreuse;
 }
+
+a.fill-div{
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
