--- a/workout-app/src/Components/Workouts/Workouts Styles/workoutStyles.css
+++ b/workout-app/src/Components/Workouts/Workouts Styles/workoutStyles.css
@@ -1,11 +1,10 @@
 .gridContainer{
     height: 30rem;
-    width: 50rem;
 }
 
 .workoutGrid{
     display: grid;
-    grid-template-columns: 15rem 30rem;
+    grid-template-columns: 15rem auto;
     grid-gap: 1rem;
     height: 100%;
 }
@@ -23,4 +22,13 @@ button.dateBTN{
     height: fit-content;
     margin-bottom: 0.25rem;
     border-radius: 1rem;
+}
+
+button.dateAddBTN{
+    height: 5rem;
+    border-radius: 1rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    background-color: chartreuse;
+    color: black;
 }
